# Dualie_Platformer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Door.h  Entity.h  Game.h  Goblin.h  Heart.h  PlatformerScene.h  Player.h  Scene.h  Settings.h
romfs/gfx/: background.t3x  door.t3x  goblin_sheet.t3x  heart.t3x  player_idle.t3x  player_jump_down.t3x  player_jump_up.t3x  player_run.t3x  player_sheet.t3x  tileset.t3x
romfs/levels/: level1.lvl
romfs/music/: music.opus
scripts/: createSheet.py
sheets/background/: sheet.t3s
sheets/door/: sheet.t3s
sheets/goblin_idle/: sheet.t3s
sheets/goblin_sheet/: sheet.t3s
sheets/heart/: sheet.t3s
sheets/player_idle/: sheet.t3s
sheets/player_jump_up/: sheet.t3s
sheets/player_run/: sheet.t3s
sheets/player_sheet/: sheet.t3s
sheets/tileset/: sheet.t3s
src/: Door.cpp  Entity.cpp  Game.cpp  Goblin.cpp  Heart.cpp  PlatformerScene.cpp  Player.cpp  Scene.cpp
